--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		<h2 class="logo">NETFLIX</h2>
 		<nav class="menu-top">
 			<a href="#" class="btnClose"><i class="fas fa-times"></i></a>
-			<a href="#lista" rel="modal:open">Minha Lista</a>
-			<a href="#logar" id="user" rel="modal:open">Entrar</a>
+			<a href="#lista" rel="modal:open">My List</a>
+			<a href="#logar" id="user" rel="modal:open">Enter</a>
 		</nav>
 	</div>
 </header><!--fim do navbar-->
@@ -43,18 +43,18 @@
 	<!--quando for aplicar responsividade eu uso a filme-principal-->
 	<div class="filme-principal tira-gif">
 		<div class="container">
-			<h3 class="titulo">Os Jovens Titãs em Ação! Nos Cinemas</h3>
+			<h3 class="titulo">Teen Titans Go! To the Movies</h3>
 			<p class="sinopse">
-				Robin, Ciborgue, Estelar, Ravena e Mutano são os Jovens Titãs. Ao perceberem que todos os super-heróis estão estrelando filmes, eles decidem se mobilizar para também ter espaço nas telonas. O líder do grupo, Robin, está determinado a ser visto como um astro e com ideias malucas e até uma canção eles partem em busca de um diretor de Hollywood, mas acabam enganados por um supervilão.
+				Robin, Cyborg, Starfire, Raven, and Beast Boy are the Teen Titans. Upon realizing that all the superheroes are starring in movies, they decide to mobilize to also have a space on the big screen. The group's leader, Robin, is determined to be seen as a star, and with crazy ideas and even a song, they set out in search of a Hollywood director but end up deceived by a supervillain. 
 			</p>
 			<div class="botoes">
 				<button role="button" class="botao" id="play-banner">
 					<i class="fas fa-play"></i>
-					<a href="#video" rel="modal:open">ASSISTIR AGORA</a>
+					<a href="#video" rel="modal:open">WATCH NOW</a>
 				</button>
 				<button role="button" class="botao" id="info-banner">
 					<i class="fas fa-info-circle"></i>
-					<a href="#ex1" rel="modal:open"> MAIS INFORMAÇÕES</a>
+					<a href="#ex1" rel="modal:open"> MORE INFORMATION</a>
 				</button>
 			</div><!--fim div botoes-->
 		</div><!--fim div container-->
